This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
8/28/17: Fixed SaveToOtherFile command to save specified, not active buffer.

8/28/17: When an image that was already saved is saved to single/other file,
retain the previous save information so that it can be made into a map.

8/28/17: Started using Intel FFT routines.

8/18/17: Fixed autofocus to apply change limits and absolute focus limits
after first iteration instead of clearing them (In 3.6).

8/17/17: Made it change the "drawn on" map ID for points drawn on an imported
map to be the ID for the native EM map that it was registered to.

8/17/17: Fixed problem with switching "Use montage mapping parameters" when
fitting a montage.

8/16/17: Added ability to relax stage by moving it back slightly from the
direction of its previous movement, in order to reduce drift.  There is a
script command to assess its value, a command to do a relaxation, and
ResetImageShift can include the relaxation when it imposes or retains
backlash.

8/16/17: Added ability to pause non-tilt series Navigator acquisition after
the current item and resume; relabeled more buttons in Camera and Script
control panel to make it easier to control Navigator acquisition.

8/8/17: Added ability to set View or Search shift offsets by placing the
marker at corresponding points in two images.

8/7/17: Search mode in Low Dose now has almost all the capabilities as View,
with the ability to take montages in Search, set defocus and shift offsets for
it, and have those offsets used properly in Realign to Item.

8/7/17: Added separate camera parameters for Search, and a new parameter set
that can be selected to be used for montages.  If fewer options are desired in
the camera setup dialog, each of these can be hidden.
